// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Ui/HelpTooltip Simple 1`] = `
<div
  class="tooltip"
>
  <h6
    class="tooltip-content"
  >
    
    Tooltip text
    
  </h6>
  <svg
    aria-labelledby="help"
    fill="#666"
    height="24px"
    role="application"
    style="display: block;"
    tabindex="-1"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      aria-hidden="true"
      style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <symbol
        id="icon-checkbox-blank"
        viewBox="0 0 24 24"
      >
        <title>
          checkbox-blank
        </title>
        <path
          d="M4 3h16a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm1 2v14h14V5H5z"
        />
      </symbol>
      <symbol
        id="icon-checkbox"
        viewBox="0 0 24 24"
      >
        <title>
          checkbox
        </title>
        <path
          d="M4 3h16a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm1 2v14h14V5H5zm6.003 11L6.76 11.757l1.414-1.414 2.829 2.829 5.656-5.657 1.415 1.414L11.003 16z"
        />
      </symbol>
      <symbol
        id="icon-chevron-bas"
        viewBox="0 0 24 24"
      >
        <title>
          chevron-bas
        </title>
        <path
          d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
        />
      </symbol>
      <symbol
        id="icon-chevron-haut"
        viewBox="0 0 24 24"
      >
        <title>
          chevron-haut
        </title>
        <path
          d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
        />
      </symbol>
      <symbol
        id="icon-close"
        viewBox="0 0 24 24"
      >
        <title>
          close
        </title>
        <path
          d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
        />
      </symbol>
      <symbol
        id="icon-download"
        viewBox="0 0 24 24"
      >
        <title>
          download
        </title>
        <path
          d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
        />
      </symbol>
      <symbol
        id="icon-error-warning"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-1-7v2h2v-2h-2zm0-8v6h2V7h-2z"
          fill="rgba(231,76,60,1)"
        />
      </symbol>
      <symbol
        id="icon-help"
        viewBox="0 0 24 24"
      >
        <title>
          help
        </title>
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zM11 7h2v2h-2V7zm0 4h2v6h-2v-6z"
        />
      </symbol>
      <symbol
        id="icon-plus"
        viewBox="0 0 24 24"
      >
        <title>
          plus
        </title>
        <path
          d="M11 11V5h2v6h6v2h-6v6h-2v-6H5v-2z"
        />
      </symbol>
      <symbol
        id="icon-refresh"
        viewBox="0 0 24 24"
      >
        <title>
          refresh
        </title>
        <path
          d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
        />
      </symbol>
      <symbol
        id="icon-x"
        viewBox="0 0 24 24"
      >
        <title>
          x
        </title>
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
        />
      </symbol>
    </svg>
    <use
      href="#icon-help"
    />
  </svg>
</div>
`;

exports[`Automated Storybook Snapshots Ui/HelpTooltip With Different Icon 1`] = `
<div
  class="tooltip"
>
  <h6
    class="tooltip-content"
  >
    
    Tooltip text
    
  </h6>
  <svg
    aria-labelledby="download"
    fill="#666"
    height="24px"
    role="application"
    style="display: block;"
    tabindex="-1"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      aria-hidden="true"
      style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <symbol
        id="icon-checkbox-blank"
        viewBox="0 0 24 24"
      >
        <title>
          checkbox-blank
        </title>
        <path
          d="M4 3h16a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm1 2v14h14V5H5z"
        />
      </symbol>
      <symbol
        id="icon-checkbox"
        viewBox="0 0 24 24"
      >
        <title>
          checkbox
        </title>
        <path
          d="M4 3h16a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm1 2v14h14V5H5zm6.003 11L6.76 11.757l1.414-1.414 2.829 2.829 5.656-5.657 1.415 1.414L11.003 16z"
        />
      </symbol>
      <symbol
        id="icon-chevron-bas"
        viewBox="0 0 24 24"
      >
        <title>
          chevron-bas
        </title>
        <path
          d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
        />
      </symbol>
      <symbol
        id="icon-chevron-haut"
        viewBox="0 0 24 24"
      >
        <title>
          chevron-haut
        </title>
        <path
          d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
        />
      </symbol>
      <symbol
        id="icon-close"
        viewBox="0 0 24 24"
      >
        <title>
          close
        </title>
        <path
          d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
        />
      </symbol>
      <symbol
        id="icon-download"
        viewBox="0 0 24 24"
      >
        <title>
          download
        </title>
        <path
          d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
        />
      </symbol>
      <symbol
        id="icon-error-warning"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-1-7v2h2v-2h-2zm0-8v6h2V7h-2z"
          fill="rgba(231,76,60,1)"
        />
      </symbol>
      <symbol
        id="icon-help"
        viewBox="0 0 24 24"
      >
        <title>
          help
        </title>
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zM11 7h2v2h-2V7zm0 4h2v6h-2v-6z"
        />
      </symbol>
      <symbol
        id="icon-plus"
        viewBox="0 0 24 24"
      >
        <title>
          plus
        </title>
        <path
          d="M11 11V5h2v6h6v2h-6v6h-2v-6H5v-2z"
        />
      </symbol>
      <symbol
        id="icon-refresh"
        viewBox="0 0 24 24"
      >
        <title>
          refresh
        </title>
        <path
          d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
        />
      </symbol>
      <symbol
        id="icon-x"
        viewBox="0 0 24 24"
      >
        <title>
          x
        </title>
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
        />
      </symbol>
    </svg>
    <use
      href="#icon-download"
    />
  </svg>
</div>
`;
